<resources>
    <string name="app_name">Mobile Device Lab</string>
    <string name="title_activity_main">Mobile Device Lab</string>
    <string name="notification_text">Listener is running.</string>
    <string name="label_fb_url">Firebase App ID</string>
    <string name="label_fb_key">Firebase Auth Key</string>
    <string name="label_enabled">Running</string>
    <string name="run_at_boot">Start at Boot</string>
    <string name="start_kso">Start Keep Screen On at Boot</string>
    <string name="install_kso">Install Keep Screen On</string>
    <string name="button_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="fb_auth_error">Firebase Authentication Error</string>
    <string name="settings_saved">Settings saved, restart may be required.</string>
</resources>
